# Crackme-for-beginners

./: README.md
crackme/: CMakeLists.txt  README.md  build.bat
crackme/src/: crypto.cpp  crypto.h  main.cpp  obfuscation.h  protection.cpp  protection.h
